﻿$Revision$
  $Author$ $Date$
	1. вспомогательные функции (trim, ExpandEnvironment) вынесены из FarEditorSet.cpp в 
		отдельный модуль tools.cpp
	2. новая функция PathToFool - конвертирует путь до файла в полный или UNC, проверяя на переменные окружения,
		относительность пути, текущую директорию, кавычки вокруг пути.
		!!! unc пути работают только в windows, только в юникодных функциях. в пути не должно быть символов /
	3. ExpandEnvironment заменена на PathToFool
	4. исправлен размер массива для вывода ошибок в функции viewFile

#Revision: 1372
  Author: ctapmex Date: 2010-02-11 17:18:25 +0500 (Чт, 11 фев 2010)
	1. из диалога настроек убрана кнопка "Тест catalog.xml" за не надобностью, т.к. кнопка "Ок" перед сохранением
		делает это же. Раньше "Ок" не выполняло этой функции.

#Revision: 1371
  Author: ctapmex Date: 2010-02-11 16:31:38 +0500 (Чт, 11 фев 2010)
	1. опечатка в r1369
	2. поправил название функции ApplySettingsToEditors, для отображения действительности
	3. из getCurrentEditor выделил код в отдельную функцию addNewEditor

#Revision: 1369
  Author: ctapmex Date: 2010-02-11 15:13:01 +0500 (Чт, 11 фев 2010)
	1. продолжение r1368.2

#Revision: 1368
  Author: ctapmex Date: 2010-02-11 13:50:25 +0500 (Чт, 11 фев 2010)
	1. автоматизация шапки этого файла не очень удачная-)
	2. убрано часть security функций по работе со строками и поправлены хедеры для сборки под cygwin

#Revision: 1367
	Author: ctapmex Date: 2010-02-11 12:23:01 +0500 (Чт, 11 фев 2010)
	1. исправлена ошибка игнорирования EEREDRAW_CHANGE, что например проявлялось с плагином AutoComplete

#Revision: 1338
	Author: ctapmex Date: 2010-02-09 10:42:55 +0500 (Вт, 09 фев 2010)
	1. Поправил бардак с предыдущей ревизии
	2. Пробую автоматизировать шапку этого файла. 

#revision 1313
	ctapmex 05.02.2010 22:10
	промежуточная ревизия. все работает, но бардак в коде. прошу пока не пинать.
	1. Для диалога настроек используем отдельную функцию, для обработки сообщений.